# eph-channel

./: .gitignore  README.md  xmake.lua
benchmarks/: basic.cpp  bufsize.cpp  common.hpp  conclusion.typ  cpu_topology.cpp  datasize.cpp  json_buf.cpp  note.md  origin_ring_buffer.hpp  origin_ring_buffer_aaod.cpp  origin_ring_buffer_contention.cpp  origin_ring_buffer_push_pop.cpp  packed_slot.cpp  ping_pong.cpp  ping_pong_common.hpp  ping_pong_iox.cpp  ping_pong_ipc.cpp  ping_pong_ipc_queue.cpp  ping_pong_ipc_snapshot.cpp  ping_pong_ipc_snapshot_buffer.cpp  ping_pong_itc.cpp  ping_pong_itc_queue.cpp  ping_pong_itc_snapshot.cpp  ping_pong_itc_snapshot_buffer.cpp  ping_pong_snapshot.cpp  ping_pong_udp.cpp  queue.cpp  ring_buffer.cpp  ring_buffer_aaod.cpp  ring_buffer_contention.cpp  ring_buffer_push_pop.cpp  shared_memory.cpp  snapshot_buffer.cpp
examples/: duplex.cpp  ipc_channel.cpp  itc_channel.cpp  itc_duplex.cpp  numa_demo.cpp  simple.cpp  snapshot_channel.cpp  udp_channel.cpp
outputs/: res.txt  res1.txt  res2.txt  res3.txt
scripts/: bench_iox_ping_pong.nu  bench_ping_pong.nu  bench_ping_pong_iox.nu  bench_ping_pong_ipc.nu  bench_ping_pong_itc.nu  bench_ring_buffer.nu  benchmark.nu  benchmark.py  foo.nu  gen_report.py  plot_bench_res.py  plot_latency.py  pyproject.toml  restore_cpu_mode.nu  set_cpu_perf_mode.nu
tests/: ipc_channel.cpp  itc_channel.cpp  main.cpp  queue.cpp  ring_buffer.cpp  seq_lock.cpp  snapshot_channel.cpp  test_channel.cpp  test_ipc_channel.cpp  test_ipc_duplex.cpp  test_itc_channel.cpp  test_itc_duplex.cpp  test_ring_buffer.cpp  udp_channel.cpp
(+112 files in other folders)
